@@ -120,10 +120,10 @@ jobs:
           IS_PRERELASE: ${{ steps.tag-check.outputs.prerelease }}
         run: |
           echo "${RELEASE_MESSAGE}" > /tmp/.commit-msg.txt
-          args=(--file /tmp/.commit-msg.txt)
+          args=(-F /tmp/.commit-msg.txt)
           [[ $IS_PRERELASE == yes ]] && args+=(--prerelease)
 
-          hub release create ${args[@]} "$TARGET_TAG"
+          gh release create ${args[@]} "$TARGET_TAG"
 
   build-and-attach-rpms:
     name: Trigger RPM release
